--- a/build.gradle
+++ b/build.gradle
@@ -20,19 +20,21 @@ micronaut {
 }
 
 dependencies {
+    implementation 'javax.inject:javax.inject:1'
     annotationProcessor("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-runtime")
-    implementation("io.micronaut.discovery:micronaut-discovery-client")
+    implementation("io.micronaut.picocli:micronaut-picocli")
     implementation("javax.annotation:javax.annotation-api")
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
+
 
 }
 
 
 application {
-    mainClass.set("com.perujug.Application")
+    mainClass.set("com.perujug.StockClientCommand")
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("11")
