--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 micronaut:
   application:
     name: stockclient
-consul:
-  client:
-    registration:
-      enabled: true
-    defaultZone: ${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}
+  http:
+    services:
+      stockclient:
+        urls:
+          http://localhost:8080/
